--- a/src/app/components/landingPageHeader/LandingPageHeader.css
+++ b/src/app/components/landingPageHeader/LandingPageHeader.css
@@ -1,10 +1,13 @@
+
+
 .header{
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 15px;
+    padding: var(--main-padding);
     background-color: #000000;
+    margin-bottom: 0;
 }
 
 .menu ul{
