--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+    font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #000000;
@@ -15,5 +16,9 @@ code {
 }
 
 :root{
-  --main-padding: 5%;
+  --main-padding: 0 10%;
+  /* --pure-black: #000000;
+  --grey-black: #EFEFEF;
+  --royal-blue: #1D75DE;
+  --pure-white: #ffffff; */
 }
