--- a/src/app/components/landingPageHeader/LandingPageHeader.css
+++ b/src/app/components/landingPageHeader/LandingPageHeader.css
@@ -18,7 +18,7 @@
     font-weight: bold;
 }
 
-.menu ul li a{
+.menu ul li, .menu ul li a{
     text-decoration: none;
     color: #ffffff;
     font-size: 15px;
