--- a/src/app/components/landingPage/pickPremium/style.module.css
+++ b/src/app/components/landingPage/pickPremium/style.module.css
@@ -1,5 +1,5 @@
 .pickPremium{
-    height: 977.16px;
+    /* height: 977.16px; */
     background: #EFEFEF;
     padding: var(--main-padding);
     display: flex;
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .pickPremiumIntro{
     width: 100%;
@@ -26,15 +28,23 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    height: 187px;
 }
 .intro h3{
+    margin: 0;
+    padding: 0;
     font-size: 23px;
     font-weight: bold;
+}
+.intro p{
+    margin: 0;
+    padding: 0;
 }
 .premiumOptions{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
     gap: 16px;
 }
 .planFooter{
@@ -60,6 +70,7 @@
     background: #ffffff;
     box-shadow: 0 0 8px 0;
     border-radius: 10px;
+    /* position: relative; */
     /* gap: 16px; */
     /* height: 555px; */
     /* border-radius: 0 0 10px 10px; */
@@ -71,15 +82,21 @@
     flex-direction: column;
     /* gap: 20px; */
     justify-content: flex-end;
-    height: 272px;
+    /* height: 272px; */
     /* border-bottom: 2px solid rgb(83, 83, 83, 0.3); */
     /* box-shadow: 0 -9px 0 0; */
     padding: 0 15px;
-    height: 100%;
+    /* position: relative;
+    bottom: 0; */
+    /* height: 100%; */
     /* position: relative; */
     /* align-items: baseline; */
     /* border-top: 2px solid #535353; */
     
+}
+ul{
+    padding: 0;
+    margin: 0;
 }
 .featuresDiv{
     display: flex;
@@ -102,12 +119,18 @@
     padding: 20px 15px;
     box-shadow: 0 0 8px 0;
     border-radius: 0 0 10px 10px;
-    
+}
+.terms .noCondition{
+    width: 100%;
+    height: 40px;
 }
 .Button{
     
     display: flex;
     justify-content: center;
+    width: 100%;
+    background-color: #000000;
+    border-radius: 500px;
     /* position: absolute;
     bottom: 0; */
 }
