--- a/src/app/components/landingPage/footer/style.module.css
+++ b/src/app/components/landingPage/footer/style.module.css
@@ -1,22 +1,39 @@
 .footer{
-    height: 554px;
+    /* height: 554px; */
     background: #000000;
     display: flex;
     flex-direction: column;
     padding: var(--main-padding);
     color: #ffffff;
     padding-top: 3%;
-    padding-bottom: 3%;
+    padding-bottom: 5%;
     justify-content: space-between;
+    
 }
 .footer1{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+/* @media (max-width: 603px) {
+    .footer .socials{
+        display: flex;
+        flex-direction: row;
+    }
+} */
+@media (max-width: 925px) {
+    .footer .socials{
+        margin: 30px 0;
+    }
+    .footer .footer2 ul{
+        margin-left: 0;
+    }
 }
 .footerNavList{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .nav{
@@ -27,6 +44,7 @@
 .navDiv{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     padding: 10px;
     gap: 50px;
 }
@@ -48,6 +66,7 @@
     color: #ffffff;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 15px;
     
 }
@@ -72,12 +91,15 @@
     justify-content: space-between;
     color: #919496;
     font-size: 12px;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 .footer2 ul{
     display: flex;
     flex-direction: row;
     gap: 30px;
     margin-left: 70px;
+    flex-wrap: wrap;
 }
 .footer2 ul li{
     list-style: none;
