--- a/src/app/components/landingPage/pickPremium/style.module.css
+++ b/src/app/components/landingPage/pickPremium/style.module.css
@@ -60,16 +60,19 @@
     margin: 0 auto;
     border-radius: 10px;
     box-shadow: 0 0 8px 0;
+    flex-wrap: wrap;
 }
 .planOption{
     
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 269px;
+    max-width: 269px;
+    width: 100%;
     background: #ffffff;
     box-shadow: 0 0 8px 0;
     border-radius: 10px;
+    /* justify-self: center; */
     /* position: relative; */
     /* gap: 16px; */
     /* height: 555px; */
