--- a/src/app/components/login/style.module.css
+++ b/src/app/components/login/style.module.css
@@ -193,3 +193,21 @@ form a{
     font-size: 17px;
     font-weight: bold;
 }
+
+.loginBtn:disabled{
+    background-color: red;
+    background-color: rgb(0, 0, 0, 0.5);
+    opacity: 0.3;
+    filter: blur();
+    filter: brightness(10);
+}
+.error{
+    margin: auto;
+    text-align: center;
+    background-color: #e91429;
+    color: #ffffff;
+    padding: 10px;
+    width: 90%;
+    border-radius: 18px;
+    margin-bottom: 20px;
+}
